# Z80emulator

./: LICENSE  README.md  setup.cfg
Z80emulator/: __init__.py  assembler.py  basic.py  cpu.py  flags.py  memory.py
Z80emulator/instructions/: base.py  cb.py  dd_fd.py  ed.py  instr.py  jumps.py
docs/: asm.html  basic.html  index.html  style.css  z80.html
tests/: test_asm.py  test_basic.py
