[metadata]
name = Z80emulator
version = 0.1.0
author = 雪島 雪乃 (ゆきしま ゆきの) Yukino Yukishima
author_email = nakamurakensuke5@gmail.com
description = Full Z80 CPU emulator in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FlandollScarlet495/Z80emulator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
